[gd_scene load_steps=7 format=3 uid="uid://caj6n15r8e4rk"]

[ext_resource type="Script" path="res://resources/galaxy_defiance_resources/components/spawner_component.gd" id="1_47fw5"]
[ext_resource type="Script" path="res://Scenes/Enemies/enemy_generator.gd" id="1_obg3q"]
[ext_resource type="PackedScene" uid="uid://cs8b8dw0uvhll" path="res://Scenes/Enemies/green_enemy.tscn" id="2_78yxj"]
[ext_resource type="PackedScene" uid="uid://bw6fvkkduiine" path="res://Scenes/Enemies/blue_silver_enemy.tscn" id="4_2r7rf"]
[ext_resource type="PackedScene" uid="uid://0rlkkq7ok1re" path="res://Scenes/Enemies/red_enemy.tscn" id="4_v3etj"]
[ext_resource type="PackedScene" uid="uid://djx1vjo6rkved" path="res://Scenes/Enemies/pink_enemy.tscn" id="5_05x1w"]

[node name="EnemyGenerator" type="Node2D"]
script = ExtResource("1_obg3q")
GreenEnemyScene = ExtResource("2_78yxj")
RedEnemyScene = ExtResource("4_v3etj")
BlueSilverEnemyScene = ExtResource("4_2r7rf")
PinkEnemyScnene = ExtResource("5_05x1w")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("1_47fw5")
scene = ExtResource("2_78yxj")

[node name="GreenEnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="RedEnemySpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="BlueSilverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PinkEnemySpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
